# realtime-ml-anomaly-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
src/anomaly_pipeline/: config.py  logger.py  main.py  schemas.py
src/anomaly_pipeline/connections/: binance_rest.py  binance_ws.py
src/anomaly_pipeline/core/: buffer.py  features.py
src/anomaly_pipeline/ml/: detector.py
src/anomaly_pipeline/storage/: sqlite_writer.py
