[project]
name = "anomaly-pipeline"
version = "0.1.0"
description = "Real-time ML anomaly detection pipeline for cryptocurrency market data"
requires-python = ">=3.13"
dependencies = [
    "websockets>=16.0",
    "aiohttp>=3.11.0",
    "polars>=1.0.0",
    "scikit-learn>=1.6.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.8.0",
    "structlog>=25.1.0",
    "aiosqlite>=0.21.0",
]

[project.scripts]
anomaly-pipeline = "anomaly_pipeline.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"src/anomaly_pipeline/schemas.py" = ["E741", "N815"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
